--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js --ext js,jsx"
+    "dev": "nodemon src/index.js --ext js,jsx",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
